--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     background-color: black;
     align-items: center;
     text-align: left;
+    z-index: 9999999;
 }
 .logo {
     overflow: hidden;
@@ -40,6 +41,13 @@
 span {
     color: red;
 }
+.spanwhite {
+    color: white;
+    text-shadow: black 5px 2px 2px;
+}
+.redspanshadow {
+    text-shadow: black 5px 5px 2px;
+}
 ul {
     display: flex;
     justify-content: space-around;
@@ -65,5 +73,50 @@ li {
 .info:active {
     font-weight: bold;
     color: red;
+    opacity: 1;
+}
+
+.dekstop1 {
+    display: flex;
+    width: 100%;
+    height: 1000px;
+    background-image: url(assets/fordekstop1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 100px;
+    justify-content: center;
+}
+.deskdesktop {
+    display: flex;
+    background-color: black;
+    width: 1500px;
+    height: 900px;
+    justify-content: center;
+    opacity: 0.8;
+    padding-left: 100px;
+    border-radius: 40px;
+    padding-top: 50px;
+}
+.deskdesktop:hover{
+    display: flex;
+    background-color: black;
+    width: 1600px;
+    height: 950px;
+    justify-content: center;
+    opacity: 1;
+    padding-left: 100px;
+    border-radius: 40px;
+    transition: 0.7s;
+    padding-top: 55px;
+}
+.deskperusahaan {
+    width: 1000px;
+    margin-top: 70px;
+    text-align: center;
+    align-items: end;
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    letter-spacing: 3px;
+    text-transform: uppercase;
     opacity: 1;
 }
