--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
     margin: 0px;
     padding: 0px;
 }
-
+body {
+    background-color: black;
+}
 .navbar {
     display: flex;
     position: fixed;
@@ -54,8 +56,7 @@ ul {
     gap: 70px;
     width: 500px;
 }
-li {
-}
+
 .info{
     text-decoration: none;
     color: white;
@@ -108,6 +109,8 @@ li {
     border-radius: 40px;
     transition: 0.7s;
     padding-top: 55px;
+    border: 3px solid white;
+    z-index: 1;
 }
 .deskperusahaan {
     width: 1000px;
@@ -119,4 +122,86 @@ li {
     letter-spacing: 3px;
     text-transform: uppercase;
     opacity: 1;
+}
+
+.desktop2 {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    background-image: url(assets/gif.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 900px;
+}
+.game-list{
+    grid-column: span 3;
+    height: 150px;
+    color: white;
+    text-align: center;
+    padding-top: 80px;
+    font-size: 60px;
+    letter-spacing: 10px;
+}
+.game {
+    display: grid;
+    overflow: hidden;
+    padding-left: 150px;
+    border-radius: 20px;
+}
+.gamesize:hover {
+    background-color: white;
+    opacity: 0.6;
+    color: white;
+}
+.gamesize {
+    width: 400px;
+    height: 400px;
+    border-radius: 20px;
+}
+.dekstop3 {
+    max-width: 1000px;
+      margin: 50px auto;
+      padding: 30px;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+}
+form {
+      display: grid;
+      gap: 15px;
+}
+label {
+      font-weight: bold;
+      color: #555;
+}
+input, textarea {
+      width: 100%;
+      padding: 12px;
+      border-radius: 10px;
+      font-size: 14px;
+      transition: 0.3s
+}
+input:focus, textarea:focus {
+      border-color: black;
+      outline: none;
+      box-shadow: 0 0 8px rgba(74, 144, 226, 0.3);
+}
+button {
+      background-color: black;
+      color: white;
+      padding: 12px;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: 0.3s;
+}
+button a {
+    text-decoration: none;
+    color: white;
+}
+button:hover {
+    background-color: darkred;
+      opacity: 0.9;
 }
