--- a/style.css
+++ b/style.css
@@ -15,13 +15,14 @@ body {
     align-items: center;
     text-align: left;
     z-index: 9999999;
+    border-bottom: 3px solid white;
 }
 .logo {
     overflow: hidden;
     width: 70px;
     height: 70px;
     border-radius: 50%;
-    border: 3px solid white;
+    border: 1px solid white;
     margin-left: 25px;
     padding-top: 5px;
     padding-right: 13px;
@@ -204,4 +205,35 @@ button a {
 button:hover {
     background-color: darkred;
       opacity: 0.9;
+}
+.motto {
+    background-image: url(assets/yamipalsu.png);
+    width: 100%;
+    height: 1000px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: end;
+}
+.mottotext {
+    height: 1000px;
+    margin-left: 50%;
+    font-size: 75px;
+    padding-top: 70px;
+    color: white;
+    text-shadow: black 7px 7px 4px;
+}
+footer {
+    margin-top: 30px;
+    background-color: black;
+}
+.footer-parents {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 20px;
+    text-align: center;
+}
+.footer-child {
+    color: white;
+    font-size: 20px;
+    margin-bottom: 30px;
 }
